--- a/src/main/resources/templates/layout/header.html
+++ b/src/main/resources/templates/layout/header.html
@@ -2,9 +2,46 @@
 <html lang="ko" xmlns:th="http://www.thymeleaf.org">
 <head th:fragment="userHead">
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
+    
+    <meta id="_csrf" name="_csrf" th:content="${_csrf.token}" />
+    <meta id="_csrf_header" name="_csrf_header" th:content="${_csrf.headerName}"/>
+    
     <title>Home</title>
     <script th:src="@{/js/jquery-2.1.3.min.js}"></script>
     <link rel="stylesheet" th:href="@{/css/base.css}" />
     <link rel="stylesheet" th:href="@{https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css}" />
+    <script type="text/javascript">
+        function formLogin() {
+            var username = $("#userId").val();
+            var password = $("#password").val();
+            var data = {"name": username, "password":password};
+            var csrfHeader = $('meta[name="_csrf_header"]').attr('content');
+            var csrfToken = $('meta[name="_csrf"]').attr('content');
+
+            if (username === "" || password === "") {
+                alert('아이디와 패스워드를 입력하세요'); return;
+            }
+
+            $.ajax({
+                 type: "post"
+                ,url:"/api/login"
+                ,data: JSON.stringify(data)
+                ,dataType:"json"
+                ,beforeSend: function(xhr) {
+                    xhr.setRequestHeader(csrfHeader, csrfToken);
+                    xhr.setRequestHeader("X-Requested-With", "XMLHttpRequest");
+                    xhr.setRequestHeader("Content-Type", "application/json");
+                }
+                ,success: function(data) {
+                    console.log(data);
+                    window.location = "/";
+                }
+                ,error: function(xhr, status, error) {
+                    console.error(error);
+                    window.location = "/login?error=true&exception=" + xhr.responseText;
+                }
+            });
+        }
+    </script>
 </head>
 </html>
