--- a/src/main/resources/templates/user/login/login.html
+++ b/src/main/resources/templates/user/login/login.html
@@ -13,13 +13,13 @@
             <form th:action="@{/loginProcess}" class="form-signin" method="post">
 <!--            <form name="frm" id="frm" action="#" method="post" onsubmit="return false" class="form-signin">-->
                 <div class="form-group">
-                    <input type="text" class="form-control" name="userId" placeholder="아이디" required="required"
+                    <input id="userId" type="text" class="form-control" name="userId" placeholder="아이디" required="required"
                            autofocus="autofocus" />
 
                     <input type="hidden" th:value="secret-value-12345" name="secretKey" />
                 </div>
                 <div class="form-group">
-                    <input type="password" class="form-control" name="password" placeholder="비밀번호" required="required" />
+                    <input type="password" class="form-control" id="password" name="password" placeholder="비밀번호" required="required" />
                 </div>
 
                 <div class="form-group">
@@ -30,7 +30,7 @@
                           class="alert alert-danger">${param.exception}</span>
                 </div>
                 <button type="submit" class="btn btn-lg btn-primary btn-block">로그인</button>
-<!--                <button type="submit" onclick="formLogin()" id="formbtn" class="btn btn-lg btn-primary btn-block">로그인</button>-->
+                <button type="button" onclick="formLogin()" id="formbtn" class="btn btn-lg btn-primary btn-block">AJAX 로그인</button>
             </form>
         </div>
     </div>
